[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "levelz-py"
version = "0.1.0"
authors = [
    { name = "Calculus Games" }
]
description = "Python bindings for the LevelZ File Format"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/LevelZ-File/py-bindings"
Issues = "https://github.com/LevelZ-File/py-bindings/issues/new/choose"